--- a/portfolio.html
+++ b/portfolio.html
@@ -67,37 +67,32 @@
       </div>
       <div class="mobile-menu js-menu-container">
         <div class="mobile-menu-container container">
-          <div>
-            <button
-              type="button"
-              class="mobile-menu-close-button js-close-menu"
-            >
-              <svg class="mobile-close-icon" width="8" height="8">
-                <use href="./images/sprite.svg#icon-close-vector"></use>
-              </svg>
-            </button>
-            <ul class="mobile-menu-list list">
-              <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="./index.html">Studio</a>
-              </li>
-              <li class="mobile-menu-item">
-                <a class="mobile-menu-link current link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="mobile-menu-item">
-                <a class="mobile-menu-link link" href="">Contacts</a>
-              </li>
-            </ul>
-          </div>
+          <button type="button" class="mobile-menu-close-button js-close-menu">
+            <svg class="mobile-close-icon" width="8" height="8">
+              <use href="./images/sprite.svg#icon-close-vector"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link current link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
           <div class="moble-menu-adress-container">
-            <ul class="mobile-menu-adress-list list">
-              <li class="mobile-menu-adress-item">
+            <ul class="mobile-menu-adress list">
+              <li class="mobile-menu-tel">
                 <a class="mobile-tel-link link" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
-              <li class="mobile-menu-adress-item">
+              <li class="mobile-menu-mail">
                 <a
                   class="mobile-mail-link link"
                   href="mailto:info@devstudio.com"
