--- a/index.html
+++ b/index.html
@@ -63,27 +63,33 @@
         </button>
       </div>
       <div class="mobile-menu js-menu-container">
-        <div class="mobile-menu-container container">
-          <button type="button" class="mobile-menu-close-button js-close-menu">
-            <svg class="mobile-close-icon" width="8" height="8">
-              <use href="./images/sprite.svg#icon-close-vector"></use>
-            </svg>
-          </button>
-          <ul class="mobile-menu-list list">
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link current link" href="./index.html"
-                >Studio</a
-              >
-            </li>
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link link" href="./portfolio.html"
-                >Portfolio</a
-              >
-            </li>
-            <li class="mobile-menu-item">
-              <a class="mobile-menu-link link" href="">Contacts</a>
-            </li>
-          </ul>
+        <div class="container">
+          <div>
+            <button
+              type="button"
+              class="mobile-menu-close-button js-close-menu"
+            >
+              <svg class="mobile-close-icon" width="8" height="8">
+                <use href="./images/sprite.svg#icon-close-vector"></use>
+              </svg>
+            </button>
+            <ul class="mobile-menu-list list">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link current link" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link link" href="">Contacts</a>
+              </li>
+            </ul>
+          </div>
+
           <div class="moble-menu-adress-container">
             <ul class="mobile-menu-adress list">
               <li class="mobile-menu-tel">
